<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiMAX Helper for Aterm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="s1_finished">%1$sが完了しました</string>
    <string name="s1_failed">%1$sに失敗しました</string>
    <string name="s2_failed">%1$sに失敗しました\n%2$s</string>

    <!-- for MyAsync -->
    <string name="now_loading">読み込み中です</string>
    
    <!-- for Preference -->
    <!-- commands -->
    <string name="pref_key_stop_service">pref_key_stop_service</string>
    <string name="pref_key_update_information">pref_key_update_information</string>
    <string name="pref_key_wake_up">pref_key_wake_up</string>
    <string name="pref_key_standby">pref_key_standby</string>
    <string name="pref_key_reboot">pref_key_reboot</string>
    <string name="pref_key_quick_web">pref_key_quick_web</string>
    <!-- value -->
    <string name="pref_key_version_name">pref_key_version_name</string>
    <string name="pref_key_aterm_host_name">pref_key_aterm_host_name</string>
    <string name="pref_key_aterm_product">pref_key_aterm_product</string>
    <string name="pref_key_aterm_ssid">pref_key_aterm_ssid</string>
    <string name="pref_key_bt_address">pref_key_bt_address</string>
    <string name="pref_key_wifi_scan_wait">pref_key_wifi_scan_wait</string>
    <string name="pref_key_bt_connect_timeout">pref_key_bt_connect_timeout</string>
    <string name="pref_key_bt_off_ctrl">pref_key_bt_off_ctrl</string>
</resources>
